# rtsp-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-build.yml  ci-testing.yml  ci.yml  lint.yml  release.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  mount.rs  server.rs
crates/core/src/media/: h264.rs  h265.rs  mjpeg.rs  mod.rs  rtp.rs
crates/core/src/protocol/: handler.rs  mod.rs  request.rs  response.rs  sdp.rs
crates/core/src/session/: mod.rs  transport.rs
crates/core/src/transport/: mod.rs  tcp.rs  udp.rs
crates/core/tests/: integration.rs
crates/gst/: Cargo.toml
crates/gst/src/: imp.rs  lib.rs
crates/python/: Cargo.toml  README.md  pyproject.toml
crates/python/src/: lib.rs  packetizer.rs  server.rs  types.rs
examples/python/: test.py
scripts/: set-version.sh
src/: handler.rs  lib.rs  main.rs  protocol.rs  server.rs  session.rs
