[package]
name = "rtsp-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line RTSP server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/marmikshah/rtsp-rs"

[[bin]]
name = "rtsp-server"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rtsp = { path = "../core" }
tracing-subscriber = "0.3"
