[package]
name = "rtsp"
version = "0.1.0"
edition = "2024"
description = "RTSP server library for live media streaming"
license = "MIT OR Apache-2.0"
repository = "https://github.com/marmikshah/rtsp-rs"

[dependencies]
base64 = "0.22"
parking_lot = "0.12.5"
thiserror = "2"
tracing = "0.1"
rand = "0.9"
