[package]
name = "rtsp"
version = "0.1.0"
edition = "2024"
description = "RTSP server library for live media streaming"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/marmikshah/rtsp-rs"
homepage = "https://github.com/marmikshah/rtsp-rs"
keywords = ["rtsp", "rtp", "streaming", "video", "server"]
categories = ["multimedia", "network-programming"]

[dependencies]
base64 = "0.22"
parking_lot = "0.12.5"
thiserror = "2"
tracing = "0.1"
rand = "0.9"
