[package]
name = "rtsp-rs"
version = "0.1.6"
edition = "2024"
rust-version = "1.92"
description = "RTSP server library for live media streaming"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/marmikshah/rtsp-rs"
homepage = "https://github.com/marmikshah/rtsp-rs"
keywords = ["rtsp", "rtp", "streaming", "video", "server"]
categories = ["multimedia", "network-programming"]

[lib]
name = "rtsp"

[dependencies]
base64 = "0.22"
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
rand = "0.10"
