[package]
name = "gst-rtsp-sink"
version = "0.1.0"
edition = "2024"
description = "GStreamer sink that publishes media over RTSP"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/marmikshah/rtsp-rs"
homepage = "https://github.com/marmikshah/rtsp-rs"
keywords = ["gstreamer", "rtsp", "sink", "streaming", "video"]
categories = ["multimedia", "network-programming"]

[lib]
name = "gstrtspserversink"
crate-type = ["cdylib"]

[dependencies]
rtsp = { path = "../core" }
parking_lot = "0.12.5"
gst = { package = "gstreamer", version = "0.23" }
gst-base = { package = "gstreamer-base", version = "0.23" }
