[package]
name = "gst-rtsp-sink"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "GStreamer sink that publishes media over RTSP"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/marmikshah/rtsp-rs"
homepage = "https://github.com/marmikshah/rtsp-rs"
keywords = ["gstreamer", "rtsp", "sink", "streaming", "video"]
categories = ["multimedia", "network-programming"]

[lib]
name = "gstrtspserversink"
crate-type = ["cdylib"]

[dependencies]
rtsp = { path = "../core" }
parking_lot = "0.12"
gstreamer = "0.25"
gstreamer-base = "0.25"
