[package]
name = "rtsp-python"
version = "0.1.0"
edition = "2024"
description = "Python bindings for the RTSP server library"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/marmikshah/rtsp-rs"
homepage = "https://github.com/marmikshah/rtsp-rs"
keywords = ["rtsp", "rtp", "streaming", "video", "python", "pyo3"]
categories = ["multimedia", "network-programming", "api-bindings"]

[lib]
name = "rtsp"
crate-type = ["cdylib"]

[dependencies]
rtsp = { path = "../core" }
parking_lot = "0.12.5"
pyo3 = { version = "0.28.0", features = ["extension-module", "macros"] }

[build-dependencies]
pyo3-build-config = "0.28"
