[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "rtsp-rs"
version = "0.1.1"
description = "Python bindings for the RTSP server library — publish live encoded video over RTSP from Python."
readme = "../../README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "the rtsp-rs authors" }]
keywords = ["rtsp", "rtp", "streaming", "video", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://github.com/marmikshah/rtsp-rs"
Repository = "https://github.com/marmikshah/rtsp-rs"

[tool.maturin]
manifest-path = "Cargo.toml"
# Include README and licenses in source distribution
sdist-include = ["../../README.md", "../../LICENSE"]
# Python package name when importing (same as [lib] name in Cargo.toml)
module-name = "rtsp"
